--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-pdf/renderer": "^3.1.9",
     "axios": "^1.4.0",
     "bootstrap-icons": "^1.10.5",
+    "date-fns": "^2.30.0",
     "datepicker": "^0.0.0",
+    "file-saver": "^2.0.5",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
     "jspdf": "^2.5.1",
@@ -27,7 +29,9 @@
     "react-router-dom": "^6.11.1",
     "react-spinners": "^0.13.8",
     "react-to-print": "^2.14.12",
-    "sort-by": "^1.2.0"
+    "sheetjs-style": "^0.15.8",
+    "sort-by": "^1.2.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
